--- a/storio1/package.json
+++ b/storio1/package.json
@@ -16,9 +16,12 @@
     "@next/font": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
+    "@iconify-icon/react": "^1.0.5",
+    "@iconify/react": "^4.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
