--- a/storio1/package.json
+++ b/storio1/package.json
@@ -16,9 +16,9 @@
     "@next/font": "13.1.6",
     "axios": "^1.3.2",
     "firebase": "^9.17.2",
-    "next": "13.1.6",
     "next": "^13.1.6",
     "react": "18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "socket.io-client": "^4.6.1"
