--- a/storio1/package.json
+++ b/storio1/package.json
@@ -17,13 +17,15 @@
     "axios": "^1.3.2",
     "firebase": "^9.17.2",
     "next": "^13.1.6",
+    "next-pwa": "^5.6.0",
     "quagga": "^0.6.16",
     "react": "18.2.0",
     "react-awesome-slider": "^4.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-qr-reader": "^3.0.0-beta-1",
-    "socket.io-client": "^4.6.1"
+    "react-router-dom": "^6.10.0",
+    "socket.io-client": "^4.6.1",
+    "workbox-precaching": "^6.5.4"
   },
   "devDependencies": {
     "@iconify-icon/react": "^1.0.5",
