--- a/storio1/package.json
+++ b/storio1/package.json
@@ -18,11 +18,13 @@
     "firebase": "^9.17.2",
     "next": "^13.1.6",
     "next-pwa": "^5.6.0",
+    "qrcode.react": "^3.1.0",
     "quagga": "^0.6.16",
     "react": "18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
     "socket.io-client": "^4.6.1",
     "workbox-precaching": "^6.5.4"
