--- a/storio1/package.json
+++ b/storio1/package.json
@@ -13,8 +13,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@loaders.gl/core": "^3.3.3",
+    "@loaders.gl/json": "^3.3.3",
     "@next/font": "13.1.6",
-    "axios": "^1.3.2",
+    "@tensorflow/tfjs": "^4.4.0",
+    "@tensorflow/tfjs-node": "^4.4.0",
+    "axios": "^1.4.0",
+    "babel-runtime": "^6.26.0",
+    "d3": "^7.8.4",
     "firebase": "^9.17.2",
     "next": "^13.1.6",
     "next-pwa": "^5.6.0",
@@ -23,11 +29,14 @@
     "quagga": "^0.6.16",
     "react": "18.2.0",
     "react-awesome-slider": "^4.1.0",
+    "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
+    "scikit-learn": "^0.1.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.6.1",
     "workbox-precaching": "^6.5.4"
