--- a/storio1/package.json
+++ b/storio1/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.17.2",
     "next": "^13.1.6",
     "next-pwa": "^5.6.0",
+    "qr-scanner": "^1.4.2",
     "quagga": "^0.6.16",
     "react": "18.2.0",
     "react-awesome-slider": "^4.1.0",
@@ -25,6 +26,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.10.0",
     "socket.io-client": "^4.6.1",
+    "styled-components": "^5.3.10",
     "workbox-precaching": "^6.5.4"
   },
   "devDependencies": {
