--- a/storio1/package.json
+++ b/storio1/package.json
@@ -22,6 +22,7 @@
     "quagga": "^0.6.16",
     "react": "18.2.0",
     "react-awesome-slider": "^4.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.10.0",
