--- a/storio1/package.json
+++ b/storio1/package.json
@@ -36,6 +36,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
+    "react-switch": "^7.0.0",
     "scikit-learn": "^0.1.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.6.1",
