--- a/storio1/package.json
+++ b/storio1/package.json
@@ -20,11 +20,13 @@
     "@tensorflow/tfjs-node": "^4.4.0",
     "axios": "^1.4.0",
     "babel-runtime": "^6.26.0",
+    "chart.js": "^4.3.0",
     "d3": "^7.8.4",
     "firebase": "^9.17.2",
     "next": "^13.1.6",
     "next-pwa": "^5.6.0",
     "pandas-js": "^0.2.4",
+    "qr-scanner": "^1.4.2",
     "qrcode.react": "^3.1.0",
     "quagga": "^0.6.16",
     "react": "18.2.0",
@@ -33,6 +35,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
     "react-switch": "^7.0.0",
